feature: reset input

--- a/2exercisie.html
+++ b/2exercisie.html
@@ -71,6 +71,7 @@
             },
             addNewCharacter(){
                 this.chars.push(this.newCharacter.name)
+                this.newCharacter = {name: ''}
             }
         }
     })
