--- a/playground.html
+++ b/playground.html
@@ -9,10 +9,10 @@
   <body>
     
     <div id="app">
-      <h1>Counter</h1>
+      <h1>{{displayTitle}}</h1>
       <p :data-increment-by="incrementAmount">Count : {{count}}</p>
       <button @click="incrementCount(count,incrementAmount,$event)">Increment Count</button>
-      <h1>{{incrementAmount}}</h1>
+      <h1>{{optimizedIncrementAmount}}</h1>
       <div>
         <label for="incrementAmount">Increment By:</label>
         <input type="number" 
@@ -45,9 +45,29 @@
       const app = createApp({
         data() { //data in function to maintain the reactivity and just pull out the last instance of that object
           return {
+            newCharacter:{
+                name: '',
+                age : ''
+             },
+             chars : ['Luffy','Zoro','Nami'],
+             favorites: [],
+             favoritesList : [],
+             persons: {
+                    chars : [
+                       {name: 'Luffy',age: 18},
+                       {name: 'Zoro', age:22},
+                       {name: 'Nami', age:22},
+                       {name: 'Sanji', age: 28},
+                       {name: 'Robin' , age: 31},
+                       {name: 'Usopp',age: 23},
+                       {name: 'Katakuri',age:54}
+                    ],
+                    show : false
+            }, 
             count : 10,
+            // counterTitle : 'Counter Standart',
             incrementAmount : 8,
-            message: "Aobaasas",
+            message: "Aobaasass",
             listofNumbers : [
               {name : 1, 
                 id: 
@@ -76,8 +96,26 @@
             console.log(count)
             console.log(newAmount)
             console.log(event)
-            this.count += this.incrementAmount
+            this.count += this.optimizedIncrementAmount
+          },
+        },
+        computed:{
+          displayTitle(){
+            if (this.count > 20){
+              return 'Counter Standart - Very Long'
+            } else{
+              return 'Counter Standart'
+            }
+          },
+          optimizedIncrementAmount(){
+            return this.displayTitle.length * this.incrementAmount
           }
+        },
+        watch:{
+          // count(newValue){
+          //   // if(newValue > 20) this.counterTitle += " GRANDE";
+
+          // }
         }
       })
 
