--- a/playground.html
+++ b/playground.html
@@ -9,12 +9,14 @@
   <body>
     
     <div id="app">
+      <h2>Statistics</h2>
+      <ul>
+        <li v-for="(stats,power) in powerStatistics">{{power}}: {{stats}}</li>
+      </ul>
+
+
 
       <h2>Characters</h2>
-
-
-
-
         <p>{{chars}}</p>
         <pre>
             {{newCharacter}}
@@ -103,12 +105,12 @@
                        {
                         name: 'Luffy',
                         age: 18,
-                        powers: ['Gum', 'Haki','Haoshoku']
+                        powers: ['Gum', 'Haki','Haoshoku','Lightning']
                        },
                        {
                         name: 'Zoro', 
                         age:22,
-                        powers: ['Sword', 'Haki', 'Strengh']
+                        powers: ['Sword', 'Haki', 'Strengh','Haoshoku']
                       },
                        {
                         name: 'Nami', 
@@ -123,7 +125,7 @@
                       {
                        name: 'Robin' , 
                        age: 31,
-                       powers: ['Knowledge', 'Akuma no Mi']
+                       powers: ['Knowledge', 'Akuma no Mi','Vision']
                       },
                        {
                         name: 'Usopp',
@@ -133,7 +135,7 @@
                        {
                         name: 'Katakuri',
                         age:54,
-                        powers: ['Vision Haki', 'Akuma no Mi']
+                        powers: ['Vision Haki', 'Akuma no Mi','Knowledge','Vision','Haoshoku']
                       }
                     ],
                     show : false
@@ -176,6 +178,27 @@
           optimizedIncrementAmount(){
             return this.displayTitle.length * this.incrementAmount
           },
+          powerStatistics(){
+            const possiblePowers = ['Haoshoku','Haki','Vision','Lightning']
+
+            const statistics = {
+              Haoshoku: 0,
+              Haki: 0,
+              Vision: 0,
+              Lightning : 0
+            }
+            this.persons.chars.forEach(character =>{
+              possiblePowers.forEach(powers =>{
+                if (character.powers.indexOf(powers) > 
+                -1) {
+                  statistics[powers] += 1
+                }
+              })
+            })
+
+
+            return statistics
+          }
         },
         methods: {
           incrementCount(count,newAmount,event){
@@ -183,6 +206,7 @@
             console.log(newAmount)
             console.log(event)
             this.count += this.optimizedIncrementAmount
+            console.log(this.persons.chars)
           },
           addCharToFavorite(character){
                 this.favorites.push(character)
